--- a/public/css/original.css
+++ b/public/css/original.css
@@ -205,3 +205,42 @@
   border-radius: 2px;
   background-color: #0fbe9f;
 }
+
+img.most-recent {
+  width: 200px;
+  height: 200px;
+}
+
+.dashboard-edit-link {
+  font-family: YuGo;
+  font-size: 14px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #0fbe9f;
+}
+
+.dashboard-delete-link {
+  font-family: YuGo;
+  font-size: 14px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #666666;
+}
+
+.h-10 {
+  height: 10%!important;
+}
+
+.w-20 {
+  width: 20%!important;
+}
+
+.w-80 {
+  width: 80%!important;
+}
