--- a/public/css/original.css
+++ b/public/css/original.css
@@ -244,3 +244,8 @@ img.most-recent {
 .w-80 {
   width: 80%!important;
 }
+
+.samazon-delete-submit-button {
+  border-radius: 2px;
+  background-color: #d94b0e;
+}
